--- a/README.rdoc
+++ b/README.rdoc
@@ -30,3 +30,6 @@ hello
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+
+down at the bottom
